# groundcheck

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: output-format.md
examples/: README.md  answer.md  bundle.json  ci_gate.py
examples/sources/: design.md  pricing.md
scripts/: smoke.sh
src/groundcheck/: __init__.py  __main__.py  align.py  cli.py  config.py  extract.py  report.py  sentences.py  textnorm.py  verify.py
tests/: conftest.py  test_align.py  test_cli.py  test_examples.py  test_extract.py  test_report.py  test_sentences.py  test_textnorm.py  test_verify.py
