[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groundcheck"
version = "0.1.0"
description = "Verifies that quotes and claims in generated output actually appear in the provided context — deterministic lexical grounding checks, cheap enough for CI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ", email = "aisingioro.kiyon@gmail.com" }]
keywords = ["rag", "hallucination", "grounding", "citations", "fact-checking", "llm", "ci", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
groundcheck = "groundcheck.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/groundcheck"
Repository = "https://github.com/JaydenCJ/groundcheck"
Issues = "https://github.com/JaydenCJ/groundcheck/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
